# CV_Parsing

./: .env  .gitignore  count_rows.py  generate_tech6_template.py  generate_template.py  inspect_docxtpl.py  inspect_xml.py  main.py  para.docx  pyproject.toml  requirements.txt  table.docx  test_hyperlinks.docx  test_hyperlinks.py  test_masking.py  test_output_tech6.docx  test_para_output.docx  test_table_output.docx  test_tag_template.docx  test_tech6_mock.py  test_template_validity.py  test_tr_logic.py  test_tr_template.docx  verify_setup.py
app/: main.py  schemas.py  utils.py
app/services/: doc_generator.py  gemini_parser.py
templates/: cv_template.docx
tests/: test_basic.py
