[project]
name = "cv-parsing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pypdf>=6.6.0",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
